--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -17,7 +17,7 @@ denyhosts_etc_dir: /etc
 denyhosts_hostname_lookup: False
 denyhosts_hosts_deny: /etc/hosts.deny
 denyhosts_lock_file: /var/lock/subsys/denyhosts
-denyhosts_purge_deny: 12h
+denyhosts_purge_deny: 4w
 denyhosts_secure_log: /var/log/secure
 denyhosts_smtp_from: 'DenyHosts <nobody@localhost>'
 denyhosts_smtp_host: localhost
